# workspace-config

./: Cargo.nix  Cargo.toml  README.md  flake.nix
src/: config.rs  error.rs  ghostty.rs  lib.rs  main.rs  plist.rs  runtime.rs  validate.rs  wrapper.rs
tests/: cli.rs
